--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-image-container {
+#image-container {
   display: flex;
-  flex-direction: row;
 }
 img {
-  width: 25%;
-  height: 25%;
+  width: 50%;
+  height: 50%;
 }
 .hidden {
   display: none;
